test/__auto_type/bad_self.c
// RUN: %check -e %s

main()
{
	__auto_type x = x; // CHECK: error: undeclared identifier "x"
}
